@@ -2,15 +2,12 @@
 ## $Id$
 ##
 
-
-
-
 include_sysdir = $(includedir)/sys
 
-include_sys_HEADERS = buf.h callout.h conf.h domain.h filio.h ioctl.h kernel.h libkern.h \
+include_sys_HEADERS = buf.h callout.h conf.h domain.h kernel.h libkern.h \
     malloc.h mbuf.h mount.h param.h proc.h protosw.h queue.h reboot.h \
     resourcevar.h rtprio.h select.h signalvar.h socket.h socketvar.h \
-    sockio.h sysctl.h syslimits.h syslog.h systm.h ttydefaults.h ucred.h \
+    sysctl.h syslimits.h syslog.h systm.h ttydefaults.h ucred.h \
     uio.h un.h
 
 PREINSTALL_FILES = $(PROJECT_INCLUDE)/sys \
